# Aegis-Linux

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  roadmap.md
packaging/appimage/: README.md  build.sh
packaging/deb/: README.md  build.sh
packaging/flatpak/: README.md
src/aegis/: __main__.py  cli.py
src/aegis/collectors/: browser.py  disks.py  docker.py  drivers.py  filesystem.py  gpu.py  integrity.py  logs.py  network.py  packages.py  procfs.py  security.py  smart.py  startup.py  sysfs.py
src/aegis/core/: concurrency.py  config.py  events.py  i18n.py  logging.py  paths.py  privileges.py  process.py  scanners.py  updater.py
src/aegis/domain/: cleaner.py  health.py  packages.py  security.py  system.py
src/aegis/plugins/: __init__.py
src/aegis/rules/: cleaner_rules.py
src/aegis/services/: alerts.py  backup_service.py  cleaner_service.py  disks_service.py  drivers_service.py  health_service.py  logs_service.py  monitor_service.py  network_service.py  packages_service.py  performance_service.py  security_service.py  startup_service.py
src/aegis/ui/: app.py  app_qt.py  theme.py  wizard.py
src/aegis/ui/pages/: cleaner.py  dashboard.py  disks.py  drivers.py  health.py  logs.py  monitor.py  network.py  packages.py  performance.py  qt_pages.py  restore_points.py  security.py  settings.py  startup.py
src/aegis/ui/pages/qt/: __init__.py  _helpers.py  cleaner.py  dashboard.py  disks.py  drivers.py  health.py  logs.py  monitor.py  network.py  packages.py  performance.py  restore.py  security.py  settings.py  startup.py
src/aegis/ui/widgets/: charts.py  common.py  confirm_dialog.py  qt.py  scrollable.py  sidebar.py  toast.py
tests/: conftest.py
tests/integration_gui/: __init__.py  conftest.py  test_buttons.py  test_simple_mode.py  test_wizard.py
tests/unit/: test_alerts.py  test_cleaner_service.py  test_core.py  test_domain.py  test_export.py  test_filesystem.py  test_i18n.py  test_scanners.py  test_updater.py
