[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-linux"
version = "0.1.0"
description = "The Open Source Linux Performance & Security Suite"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Aegis Linux Contributors"}]
requires-python = ">=3.11"
keywords = ["linux", "optimization", "security", "monitoring", "cleaner", "maintenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "platformdirs>=4.0",
    "PyQt6>=6.6",
    "PyQt6-Charts>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyfakefs>=5.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
]
gpu = ["nvidia-ml-py3>=7.352"]  # optional NVIDIA telemetry

[project.scripts]
aegis = "aegis.cli:main"
aegis-linux = "aegis.cli:main"
aegis-qt = "aegis.ui.app_qt:launch_gui"

[project.urls]
Homepage = "https://github.com/halgorn/Aegis-Linux"
Issues = "https://github.com/halgorn/Aegis-Linux/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegis = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"